--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
     "description": "Rank up while working out",
     "categories": ["health", "lifestyle"],
     "start_url": "/RankOut/index.html",
+    "version": "1.0.0",
     "background_color": "#f7f7ff",
     "theme_color": "#f7f7ff",
     "display": "standalone",
