--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "RankOut",
     "description": "Rank up while working out",
     "categories": ["health", "lifestyle"],
-    "start_url": "/RankOut/index.html",
+    "start_url": "/RankOut/index.html?homescreen=true",
     "version": "1.0.0",
     "background_color": "#f7f7ff",
     "theme_color": "#f7f7ff",
@@ -13,12 +13,12 @@
         {
             "src": "rankoutlogo192.png",
             "sizes": "192x192",
-            "type": "image/jpeg"
+            "type": "image/png"
         },
         {
             "src": "rankoutlogo512.png",
             "sizes": "512x512",
-            "type": "image/jpeg",
+            "type": "image/png",
             "purpose": "maskable"
         },
          {
